--- a/.gitignore
+++ b/.gitignore
@@ -6,5 +6,16 @@
 /config/secrets/prod/prod.decrypt.private.php
 /public/bundles/
 /var/
+/.idea/
 /vendor/
 ###< symfony/framework-bundle ###
+
+###> phpunit/phpunit ###
+/phpunit.xml
+.phpunit.result.cache
+###< phpunit/phpunit ###
+
+###> symfony/phpunit-bridge ###
+.phpunit.result.cache
+/phpunit.xml
+###< symfony/phpunit-bridge ###
