--- a/.env
+++ b/.env
@@ -33,7 +33,7 @@ DATABASE_URL="mysql://root:Ilogix123%21%40%23@127.0.0.1:3306/demo_ecommerce?serv
 # Choose one of the transports below
 # MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/messages
 # MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
-MESSENGER_TRANSPORT_DSN=doctrine://demo_ecommerce?auto_setup=0
+MESSENGER_TRANSPORT_DSN=doctrine://default
 ###< symfony/messenger ###
 
 ###> symfony/mailer ###
