--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -10,6 +10,7 @@ framework:
     session:
         handler_id: null
         cookie_secure: auto
+        gc_probability: 0
         cookie_samesite: lax
         storage_factory_id: session.storage.factory.native
 
